// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - spring-cloud:gateway with defaults options should call source snapshot 1`] = `
{
  "addJavaDependencies": [
    [
      {
        "artifactId": "spring-cloud-starter-gateway",
        "groupId": "org.springframework.cloud",
      },
    ],
  ],
}
`;

exports[`generator - spring-cloud:gateway with defaults options should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/JWTRelayGatewayFilterFactory.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cloud:gateway with imperative option should call source snapshot 1`] = `
{
  "addJavaDependencies": [
    [
      {
        "artifactId": "spring-cloud-starter-gateway-mvc",
        "groupId": "org.springframework.cloud",
      },
    ],
  ],
  "addSpringFactory": [
    {
      "key": "org.springframework.cloud.gateway.server.mvc.filter.FilterSupplier",
      "value": "com.mycompany.myapp.config.GatewayFilterSupplier.FilterSupplier",
    },
  ],
}
`;

exports[`generator - spring-cloud:gateway with imperative option should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/GatewayFilterSupplier.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cloud:gateway with serviceDiscovery option should call source snapshot 1`] = `
{
  "addJavaDependencies": [
    [
      {
        "artifactId": "spring-cloud-starter-gateway",
        "groupId": "org.springframework.cloud",
      },
    ],
  ],
}
`;

exports[`generator - spring-cloud:gateway with serviceDiscovery option should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/JWTRelayGatewayFilterFactory.java": {
    "stateCleared": "modified",
  },
}
`;
